styles/styles.css
@import url(http://fonts.googleapis.com/css?family=Oswald);
@font-face { font-family: 'Bebas'; src: url('https://s3.amazonaws.com/john-elisa-wedding-website-content/fonts/BebasKai-Regular.otf'); }
@font-face { font-family: 'Young & Beautiful'; src: url('https://s3.amazonaws.com/john-elisa-wedding-website-content/fonts/Mf+Young+%26+Beautiful.ttf'); }
@font-face { font-family: 'Swiss721BT-Thin'; src: url('https://s3.amazonaws.com/john-elisa-wedding-website-content/fonts/Swiss721BT-Thin.ttf'); }

/* for ui.bootstrap */
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }

@media (max-width: 768px) {
  .je-logo span:after { content: 'J&E'}
  .splash-image {
    width: 100%;
  }
  #footer-image {
    width: 100%;
  }
  nav a {
    font-size: 1em;
  }
  #section-top {
    padding: 4em 0 0 0;
  }
}
@media (min-width: 769px) {
  .je-logo span:after { content: 'John & Elisa'}
  #footer-image {
    width:100%;
  }
  nav a {
    font-size: 1.25em;
  }
#section-top {
  padding: 5em 0 0 0;
}
}

html, body {
  margin: 0;
  padding: 0;
  /* background: #ebebeb; */
}
body, button {
  font-family: 'Swiss721BT-Thin', 'Oswald', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
h1 {
  padding-top: 1em;
}
h2 {
  font-family: 'Swiss721BT-Thin', Helvetica, Arial, sans-serif;
  font-size: 2.2em;
}
img {
  max-width: 100%;
}
nav {
  font-family: 'Swiss721BT-Thin', Helvetica, Arial, sans-serif;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  background: #fff;
  background: rgba(255, 255, 255, 0.8);
}
nav li, nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center
}
nav li, nav a {
  display: inline-block;
}
nav a {
  padding: 1em;
  color: #333;
  text-decoration: none;
}
nav a:hover {
  background: #F5DADE;
  text-decoration: none;
  color: #fff
}
nav a:focus {
  text-decoration: none;
  color: #fff
}
nav a.active {
  background: #A54399;
  color: #fff;
  text-decoration: none;
  /* background: #00AC7F; */
}
#section-bottom {
  padding: 0 0 0 0;
}
#section-3 {
  /* background-image: url('https://s3.amazonaws.com/john-elisa-wedding-website-content/images/kiss.jpg'); */
  /* background-position: center center; */
  /* background-size: cover; */
}
section {
  padding: 1.5em 0 1em 0;
  text-align: center;
}
footer {
  text-align: center;
}
button {
  font-family: 'Bebas', Helvetica, Arial, sans-serif;
  font-size: 18px;
  border: 0;
  padding: 15px 30px;
  background: #A54399;
  color: #fff;
  cursor: pointer;
}
.je-logo {
  font-family: 'Young & Beautiful', cursive;
  font-size: 1.5em;
}
#intro {
  width: 100%;
}
#intro-image {
  height: auto; 
  position: relative;
}
#intro-title {
  position: relative;
  bottom: 5em;
  font-family: 'Young & Beautiful', cursive;
  font-size: 3em;
  text-shadow: 1px 1px grey;
  color: #00AC7F;
  padding: 1em 1em 1em 1em;
  /* text-align: center; */
}
#intro-blurb {
  /* position: absolute;  */
  /* bottom: 10em;  */
  padding: 2em 1em 1em 1em;
  font-size: 1.75em;
  height: 100vh;
  /* width: 75% */
  color: white;
  font-weight: bold;
  /* text-align: left; */
}

img.profile-pic {
  border:1px solid #;
  /* -webkit-border-radius: 20px; */
  /* -moz-border-radius: 20px; */
  /* border-radius: 20px; */
  /* max-width: 9em; */
  padding: 2em 2em 2em 2em;
  height: auto;
}

img.couple-profile-pic {
  border:1px solid #;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
  /* max-width: 9em; */
  height: auto;
}

